fix(core): invisible search suggestion item

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -19,7 +19,6 @@
 	&-suggestion {
 		padding-top: 0.375rem;
 		padding-bottom: 0.375rem;
-		opacity: 0;
 
 		&__thumbnail {
 			overflow: hidden;
